--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "rangeoshun@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "closure-compiler-webpack-plugin": "^0.1.8",
     "webpack": "^1.14.0"
   }
