--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Another material ripple effect solution.",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.dev.config.js | webpack --config webpack.min.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
